PCOMP/Karloff/Karloff.java
/* Generated By:JavaCC: Do not edit this line. Karloff.java */
import java.io.*;
public class Karloff implements KarloffConstants {

  public static void main(String args[]) throws ParseException,IOException {

    Karloff parser = new Karloff(new FileInputStream(args[0]));
    parser.Karloff();
  }

  static final public void Karloff() throws ParseException {
    Main();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      Func();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(0);
  }

//MAIN -> "void" "main" "(" ")" "{" VARDECL SEQCOMANDOS "}"
  static final public void Main() throws ParseException {
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(OPENPAR);
    ListaArg();
    jj_consume_token(CLOSEPAR);
    jj_consume_token(ACHAVES);
    VarDeclaration();
    CommandsSequence();
    jj_consume_token(FCHAVES);
  }

//FUNC -> FUNC "func" TIPO TOKEN_id "(" LISTAARG? ")" "{" VARDECL SEQCOMANDOS "}"
//| "func" TIPO TOKEN_id "(" LISTAARG? ")" "{" VARDECL SEQCOMANDOS "}"
  static final public void Func() throws ParseException {
    label_1:
    while (true) {
      jj_consume_token(FUNC);
      Tipo();
      jj_consume_token(TOKEN_ID);
      jj_consume_token(OPENPAR);
      ListaArg();
      jj_consume_token(CLOSEPAR);
      jj_consume_token(ACHAVES);
      VarDeclaration();
      CommandsSequence();
      jj_consume_token(FCHAVES);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

//LISTAARG -> TIPO TOKEN_id | LISTAARG "," TIPO TOKEN_id
  static final public void ListaArg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPO:
      Tipo();
      jj_consume_token(TOKEN_ID);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        Tipo();
        jj_consume_token(TOKEN_ID);
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

//VARDECL -> VARDECL "newVar" TIPO TOKEN_id ";" | vazio
//Abordagem diferente usando o operador *. Esse operador permite que a sequência de declarações de variáveis seja repetida zero ou mais vezes. 
//Nesse caso, a sequência é repetida por quantas vezes houver novas declarações de variáveis no código-fonte.
  static final public void VarDeclaration() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARDECL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(VARDECL);
      Tipo();
      jj_consume_token(TOKEN_ID);
      jj_consume_token(SEMICOLON);
    }
  }

//TIPO -> "integer" | "bool"
  static final public void Tipo() throws ParseException {
    jj_consume_token(TIPO);
  }

//SEQCOMANDOS -> SEQCOMANDOS COMANDO | vazio
  static final public void CommandsSequence() throws ParseException {
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case UNTIL:
      case REPEAT:
      case RETURN:
      case SYSOUTPUT:
      case TOKEN_ID:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      Command_A();
    }
  }

//COMANDO -> TOKEN_id "=" EXP ";"
//| TOKEN_id "(" LISTAEXP? ")" ";"
//| "if" "(" EXP ")" "then" "{" SEQCOMANDOS "}" ";"
//| "while" "(" EXP ")" "{" SEQCOMANDOS "}" ";"
//| "repeat" "{" SEQCOMANDOS "}" "until" "(" EXP ")" ";"
//| "return" EXP ";"
//| "System.output" "(" EXP ")" ";"
//| TOKEN_id "=" "System.readint" "(" ")" ";"
  static final public void Command_A() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOKEN_ID:
      jj_consume_token(TOKEN_ID);
      Command_B();
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(OPENPAR);
      Exp();
      jj_consume_token(CLOSEPAR);
      jj_consume_token(THEN);
      jj_consume_token(ACHAVES);
      CommandsSequence();
      jj_consume_token(FCHAVES);
      jj_consume_token(SEMICOLON);
      break;
    case UNTIL:
      jj_consume_token(UNTIL);
      jj_consume_token(OPENPAR);
      Exp();
      jj_consume_token(CLOSEPAR);
      jj_consume_token(REPEAT);
      jj_consume_token(ACHAVES);
      CommandsSequence();
      jj_consume_token(FCHAVES);
      jj_consume_token(SEMICOLON);
      break;
    case REPEAT:
      jj_consume_token(REPEAT);
      jj_consume_token(ACHAVES);
      CommandsSequence();
      jj_consume_token(FCHAVES);
      jj_consume_token(UNTIL);
      jj_consume_token(OPENPAR);
      Exp();
      jj_consume_token(CLOSEPAR);
      jj_consume_token(SEMICOLON);
      break;
    case RETURN:
      jj_consume_token(RETURN);
      Exp();
      jj_consume_token(SEMICOLON);
      break;
    case SYSOUTPUT:
      SystemOutput();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Command_B() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATTR:
      jj_consume_token(ATTR);
      Exp();
      jj_consume_token(SEMICOLON);
      break;
    case TOKEN_ID:
      jj_consume_token(TOKEN_ID);
      jj_consume_token(ATTR);
      Exp();
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SystemOutput() throws ParseException {
    jj_consume_token(SYSOUTPUT);
    jj_consume_token(OPENPAR);
    Exp();
    jj_consume_token(CLOSEPAR);
    jj_consume_token(SEMICOLON);
  }

  static final public void SystemReadInt() throws ParseException {
    jj_consume_token(TOKEN_ID);
    jj_consume_token(ATTR);
    jj_consume_token(SYSREADINT);
    jj_consume_token(OPENPAR);
    jj_consume_token(CLOSEPAR);
    jj_consume_token(SEMICOLON);
  }

//EXP -> "(" EXP OP EXP ")" | FATOR
  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAR:
      jj_consume_token(OPENPAR);
      Exp();
      jj_consume_token(OP);
      Exp();
      jj_consume_token(CLOSEPAR);
      break;
    case TRUE:
    case FALSE:
    case TOKEN_ID:
    case TOKEN_NUM_LITERAL:
      Fator_A();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//LISTAEXP -> EXP | LISTAEXP "," EXP
  static final public void ListaExp_A() throws ParseException {
    Exp();
    ListaExp_B();
  }

  static final public void ListaExp_B() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      Exp();
      ListaExp_B();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

//FATOR -> TOKEN_id | TOKEN_id "(" LISTAEXP? ")"
//| TOKEN_numliteral | "true" | "false"
  static final public void Fator_A() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TOKEN_ID:
      jj_consume_token(TOKEN_ID);
      Fator_B();
      break;
    case TOKEN_NUM_LITERAL:
      jj_consume_token(TOKEN_NUM_LITERAL);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Fator_B() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAR:
      jj_consume_token(OPENPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPENPAR:
      case TRUE:
      case FALSE:
      case TOKEN_ID:
      case TOKEN_NUM_LITERAL:
        ListaExp_A();
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(CLOSEPAR);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public KarloffTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2000000,0x2000000,0x8000,0x800,0x200,0x4ec0000,0x4ec0000,0x4001000,0xc032000,0x8000,0xc030000,0xc032000,0x2000,};
   }

  /** Constructor with InputStream. */
  public Karloff(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Karloff(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new KarloffTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Karloff(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new KarloffTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Karloff(KarloffTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(KarloffTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[30];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 13; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 30; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
